--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "emoji-picker-react": "^4.9.2",
     "firebase": "^10.11.0",
+    "million": "^3.0.6",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
